# weathercli

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  api.py  build.rs  core.pyi  custom_layouts.md  custom_multi_command.py  datasources.md  dev-requirements.in  dev-requirements.txt  develop.md  firedbg.toml  location.py  minify  minimal-pyproject.toml  noaa.py  noaa_test.py  nws_test.py  openweathermap_weather_data.py  pyproject.toml  requirements.in  requirements.txt  test.http  the_weather_channel_test.py  update_docs_templates.py  update_index_hashes.py  update_weather_codes_hash.py  weather.py  weather_ascii_images.json  weather_channel_scraper.py  weather_codes.csv  weather_codes.json  weather_codes.py  weather_data.py  weather_profile.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build-daemon.yml  build-rust.yml  build-updater.yml  build.yml  github-pages.yml  python-app.yml  test.yml  website-update.yml
cli/: __init__.py  api.py  api_keys.py  cache.py  custom_click_group.py  custom_multi_command.py  default_layout.py  dummy_fore.py  getch.py  layout.py  location.py  openweathermap_conditions.py  openweathermap_weather_data.py  prompt.py  settings.py  the_weather_channel_current.py  url.py  version.py  weather.py  weather_condition.py  weather_data.py  weather_file.py  wind_data.py
cli/backend/: meteo.py  nws.py  openweathermap.py  openweathermap_conditions.py  the_weather_channel.py  weather_condition.py  weather_data.py  weather_forecast.py
cli/commands/: util.py
cli/layout/: __init__.py  default_layout.py  image_to_text.py  layout.py  layout_file.py  layout_function.py  layout_item.py  layout_row.py  layout_text.py  layout_variable.py  temp_constants.py  util.py
cli/local/: cache.py  settings.py  weather_file.py
core/: __init__.pyi  networking.pyi  updater.pyi
crates/backend/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  lib.rs
crates/cli/src/arguments/: global.rs
crates/cli/src/commands/: backend_commands.rs  settings_commands.rs
crates/layout/: Cargo.toml
crates/layout/src/: image_to_text.rs  lib.rs  row.rs  tera_functions.rs  util.rs
crates/layout/src/item/: function.rs  text.rs  variable.rs
crates/layout2/: Cargo.toml
crates/local/: Cargo.toml
crates/local/src/: location.rs  settings.rs
crates/local/src/cache_v2/: mod.rs
crates/local/src/json/: nominatim.rs
crates/networking_internal/: Cargo.toml
crates/networking_macros/: Cargo.toml
crates/settings_app/: Cargo.toml
crates/settings_app/src/: datasource.rs  lib.rs
crates/shared_deps/: Cargo.toml
crates/terminal/: Cargo.toml
crates/updater/: Cargo.toml
crates/updater/src/: component.rs  lib.rs  resource.rs  update_server_json.rs
crates/weather_plugin/: Cargo.toml
crates/weather_plugin/src/: lib.rs
custom_backends/test_wasm/: Cargo.toml
custom_backends/test_wasm/src/: lib.rs
dev-scripts/: Cargo.toml
dev-scripts/src/: default_layout.rs  layout.rs  main.rs  parser.rs  update_docs.rs  update_hash.rs
docs/: config.html  index.html  index.json  theme.js
docs_templates/: base.html  config.html  default_layout.json  default_layout.res  footer.html  index.html  index.js  index.json  weather_ascii_images.json  weather_ascii_images.res  weather_codes.json  weather_codes.res
installer/ui/: index.html
internal/backend/: Cargo.toml
internal/backend/src/: datasource.rs  lib.rs  weather_condition.rs  weather_data.rs  weather_forecast.rs
internal/backend/src/meteo/: forecast.rs  json.rs  mod.rs  weather_data.rs
internal/backend/src/nws/: current.rs  forecast.rs  json.rs  mod.rs
internal/backend/src/openweathermap/: current.rs  forecast.rs  future.rs  json.rs  mod.rs
internal/backend/src/openweathermap_onecall/: current.rs  forecast.rs  future.rs  json.rs  mod.rs  weather_data.rs
internal/cli/: Cargo.toml
internal/cli/src/: arguments.rs  commands.rs  error.rs  lib.rs
internal/cli/src/arguments/: global.rs
internal/cli/src/commands/: backend_commands.rs  layout_commands.rs  saved_commands.rs  settings_commands.rs  util.rs
internal/cli/src/layout/: image_to_text.rs  item.rs  layout_input.rs  layout_serde.rs  mod.rs  row.rs  util.rs
internal/custom_backend/: Cargo.toml
internal/custom_backend/src/: dynamic_library_loader.rs  lib.rs  wasm_loader.rs
internal/layout/: Cargo.toml
internal/layout/src/: error.rs  image_to_text.rs  item.rs  layout_input.rs  lib.rs  row.rs  tera_functions.rs  util.rs
internal/layout/src/item/: function.rs  text.rs  variable.rs
internal/local/: Cargo.toml
internal/local/src/: lib.rs  location.rs  settings.rs  weather_file.rs
internal/local/src/cache/: internal.rs  mod.rs
internal/local/src/cache_v2/: mod.rs
internal/local/src/json/: bing.rs  mod.rs
internal/location/: Cargo.toml
internal/location/src/: lib.rs
internal/networking/: Cargo.toml
internal/networking/src/: lib.rs
internal/networking_internal/: Cargo.toml
internal/networking_internal/src/: desktop.rs  lib.rs
internal/settings_app/: Cargo.toml
internal/settings_app/src/: app.rs  lib.rs  message.rs  theme.rs
internal/shared_deps/: Cargo.toml
internal/shared_deps/src/: lib.rs
internal/updater/: Cargo.toml
internal/updater/src/: component.rs  lib.rs  resource.rs
internal/weather_error/: Cargo.toml
internal/weather_error/src/: lib.rs
internal/weather_plugin/: Cargo.toml
internal/weather_plugin/src/: lib.rs
scripts/: dev_helper.py  generate_stubs.py  generate_stubs_v2.py  path_helper.py  update_docs_templates.py  update_index_hashes.py  version_sync.py
src/: async_runner.rs  autolaunch.rs  backend.rs  bin_common.rs  cache.rs  color.rs  component_updater.rs  custom_backend.rs  dynamic_loader.rs  error.rs  installer.rs  layout.rs  lib.rs  local.rs  location.rs  logging.rs  networking.rs  openweathermap_json.rs  prompt.rs  settings_app.rs  status.rs  update.rs  updater.rs  util.rs  weather.rs  weather_data.rs  weather_file.rs  weatherd.rs  wind_data.rs
tests/: test_cache.rs  test_init.py  test_layout.py
updater/: Cargo.toml
updater/src/: main.rs
(+189 files in other folders)
