[[bin]]
required-features = ["support", "installer"]
name = "installer"
path = "src/installer.rs"

[[bin]]
name = "weather"
path = "src/weather.rs"


[package]
name = "weather"
version = "2023.12.1"
edition = "2021"
authors = ["Ashwin Naren"]
rust-version = "1.64.0"
description = "weather, in your terminal"
readme = "README.md"
homepage = "https://arihant2math.github.io/weathercli/"
repository = "https://github.com/arihant2math/weathercli"

[build-dependencies]
winresource = "0.1"

[dependencies]
async_runner = { path = "./internal/async_runner" }
custom_backend = { path = "./internal/custom_backend" }
cli = { path = "./internal/cli" }
terminal = { path = "./internal/terminal" }
weather_dirs = { path = "./internal/weather_dirs" }
weather_error = { path = "./internal/weather_error" }
local = { path = "./internal/local" }
updater = { path = "./internal/updater" }
auto-launch = { version = "0.5", optional = true }
bincode = { version = "1.3", optional = true }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
log4rs = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = "1.33"

[dev-dependencies]
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.*"

[features]
support = ["dep:auto-launch", "dep:bincode"]
installer = ["tokio/full"]
gui = ["cli/gui"]
default = ["gui"]

[profile.bench]
debug = true
