[[bin]]
required-features = ["support", "installer"]
name = "installer"
path = "src/installer.rs"

[[bin]]
name = "weather"
path = "src/weather.rs"

[workspace]
members = [
    "custom_backends/theweatherchannel",
    "custom_backends/test_wasm",
    "internal/backend",
    "internal/cli",
    "internal/custom_backend",
    "internal/layout",
    "internal/layout2",
    "internal/local",
    "internal/networking",
    "internal/networking_internal",
    "internal/networking_macros",
    "internal/settings_app",
    "internal/shared_deps",
    "internal/terminal",
    "internal/updater",
    "internal/weather_dirs",
    "internal/weather_plugin",
    "internal/weather_structs",
]

exclude = [
    "dev-scripts"
]

[package]
name = "weather"
version = "2024.5.18"
edition = "2021"
authors = ["Ashwin Naren"]
rust-version = "1.64.0"
description = "weather, in your terminal"
readme = "README.md"
homepage = "https://arihant2math.github.io/weathercli/"
repository = "https://github.com/arihant2math/weathercli"

[build-dependencies]
winresource = "0.1"

[dependencies]
custom_backend = { path = "./internal/custom_backend" }
cli = { path = "./internal/cli" }
terminal = { path = "./internal/terminal" }
weather_dirs = { path = "./internal/weather_dirs" }
local = { path = "./internal/local" }
updater = { path = "./internal/updater" }
auto-launch = { version = "0.5", optional = true }
bincode = { version = "1.3", optional = true }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
log4rs = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.*"

[features]
support = ["dep:auto-launch", "dep:bincode"]
installer = ["tokio/full"]
gui = ["cli/gui"]
default = ["gui"]

[profile.release]
debug = 1

[profile.bench]
debug = true
