[[bin]]
required-features = ["support", "installer"]
name = "installer"
path = "src/installer.rs"

[[bin]]
name = "weather"
path = "src/weather.rs"

[workspace]
members = [
    "custom_backends/theweatherchannel",
    "custom_backends/test_wasm",
    "crates/backend",
    "crates/cli",
    "crates/custom_backend",
    "crates/layout",
    "crates/layout2",
    "crates/local",
    "crates/networking",
    "crates/networking_internal",
    "crates/networking_macros",
    "crates/settings_app",
    "crates/terminal",
    "crates/updater",
    "crates/weather_dirs",
    "crates/weather_plugin",
    "crates/weather_structs",
]

exclude = [
    "dev-scripts"
]

[workspace.dependencies]
bincode = "1.3"
chrono = "0.4"
firedbg-lib = "0.1.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
thiserror = "1.0"
windows = "0.58"


[package]
name = "weather"
version = "2024.5.18"
edition = "2021"
authors = ["Ashwin Naren"]
rust-version = "1.64.0"
description = "weather, in your terminal"
readme = "README.md"
homepage = "https://arihant2math.github.io/weathercli/"
repository = "https://github.com/arihant2math/weathercli"

[build-dependencies]
winresource = "0.1"

[dependencies]
custom_backend = { path = "./crates/custom_backend" }
cli = { path = "./crates/cli" }
terminal = { path = "./crates/terminal" }
weather_dirs = { path = "./crates/weather_dirs" }
local = { path = "./crates/local" }
updater = { path = "./crates/updater" }
auto-launch = { version = "0.5", optional = true }
bincode = { version = "1.3", optional = true }
clap = { version = "4.5", features = ["derive"] }
firedbg-lib = { workspace = true }
log = "0.4"
log4rs = "1.3"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.*"

[features]
support = ["dep:auto-launch", "dep:bincode"]
installer = ["tokio/full"]
gui = ["cli/gui"]
default = ["gui"]

[profile.release]
debug = 1

[profile.bench]
debug = true
