[package]
name = "dev-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
weather_error = { path = "../internal/weather_error" }
cli = { path = "../internal/cli" }
local = { path = "../internal/local" }
networking = { path = "../internal/networking" }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3.3"
zip = "0.6.4"
rayon = "1.7"
regex = "1.8"
