[package]
name = "dev-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cli = { path = "../internal/cli" }
layout = { path = "../internal/layout" }
local = { path = "../internal/local" }
networking = { path = "../internal/networking" }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
zip = "0.6"
rayon = "1.10"
regex = "1.10"
