[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
sha256 = "1.1.2"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.11.14", features = ["stream", "json"] }
futures-util = "0.3.27"
indicatif = "0.17.3"
tokio = { version = "1.26.0", features = ["full"] }
clap = { version = "4.1.8", features = ["derive"] }
