[package]
name = "updater"
version = "2023.3.19"
edition = "2021"

[dependencies]
sha256 = "1.1.2"
serde_json = "1.0"
futures-util = "0.3.27"
indicatif = "0.17.3"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.reqwest]
version = "0.11.14"
features = [
    "stream",
    "json",
]

[dependencies.tokio]
version = "1.26.0"
features = [
    "full",
]

[dependencies.clap]
version = "4.1.8"
features = [
    "derive",
]
