[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
firedbg-lib = "0.1.2"
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
parse_duration = "2.1"

clap = { version = "4.5", features = ["derive"] }
regex = "1.10"

custom_backend = { path = "../custom_backend" }
updater = { path = "../updater" }
local = { path = "../local" }
backend = { path = "../backend" }
terminal = { path = "../terminal" }
layout = { path = "../layout" }
networking = { path = "../networking" }
weather_dirs = { path = "../weather_dirs" }
settings_app = { path = "../settings_app", optional = true }

[features]
gui = ["dep:settings_app"]
