[package]
name = "layout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }

image = "0.25"
regex = "1.10"
tera = "1"

custom_backend = { path = "../custom_backend" }
updater = { path = "../updater" }
local = { path = "../local" }
backend = { path = "../backend" }
terminal = { path = "../terminal" }
networking = { path = "../networking" }
weather_dirs = { path = "../weather_dirs" }
