[package]
name = "local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_deps = { path = "../shared_deps" }
networking = { path = "../networking" }
thiserror = "1.0"
serde = "1.0"
firedbg-lib = "0.1"
log = "0.4"
hex = "0.4"
sha2 = "0.10"
weather_structs = { path = "../weather_structs" }
ahash = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Foundation", "Devices_Geolocation", "System_Power", "Win32_System_Power", "Win32_Foundation"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
terminal = { path = "../terminal" }
weather_dirs = { path = "../weather_dirs" }
