[package]
name = "local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }

ahash = "0.8"
hex = "0.4"
sha2 = "0.10"

networking = { path = "../networking" }
weather_structs = { path = "../weather_structs" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Foundation", "Devices_Geolocation", "System_Power", "Win32_System_Power", "Win32_Foundation"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
terminal = { path = "../terminal" }
weather_dirs = { path = "../weather_dirs" }
