[package]
name = "shared_deps"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
serde_json = "1.0"
simd-json = "0.13"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Foundation", "Devices_Geolocation", "System_Power", "Win32_System_Power", "Win32_Foundation"] }
