[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firedbg-lib = "0.1.2"
log = { workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
simd-json = { workspace = true }
thiserror = { workspace = true }

self-replace = "1.4"
reqwest = { version = "0.12", features = ["blocking"] }

local = { path = "../local" }
terminal = { path = "../terminal" }
networking = { path = "../networking" }
