[package]
name = "weather_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }

backend = { path = "../backend" }
custom_backend = { path = "../custom_backend" }
local = { path = "../local" }
networking = { path = "../networking" }
weather_structs = { path = "../weather_structs" }
