[package]
name = "test_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
extism-pdk = "1.0.0-rc1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
shared_deps = { path = "../../crates/shared_deps" }
weather_structs = { path = "../../crates/weather_structs" }

[lib]
crate-type = ["cdylib"]
