[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
shared_deps = { path = "../shared_deps" }
weather_error = { path = "../weather_error" }
weather_structs = { path = "../weather_structs" }
local = { path = "../local" }
networking = { path = "../networking" }
