[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
nestify = "0.3"
shared_deps = { path = "../shared_deps" }
local = { path = "../local" }
thiserror = "1.0"
networking = { path = "../networking" }
weather_structs = { path = "../weather_structs" }
