[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true}
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true}
simd-json = { workspace = true }
thiserror = { workspace = true }

nestify = "0.3"
local = { path = "../local" }
networking = { path = "../networking" }
weather_structs = { path = "../weather_structs" }
