[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
clap = { version = "4.2", features = ["derive"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.9.2"
regex = "1.8"
log = "0.4"
async_runner = { path = "../async_runner" }
custom_backend = { path = "../custom_backend" }
updater = { path = "../updater" }
local = { path = "../local" }
backend = { path = "../backend" }
terminal = { path = "../terminal" }
networking = { path = "../networking" }
weather_dirs = { path = "../weather_dirs" }
weather_error = { path = "../weather_error" }
settings_app = { path = "../settings_app", optional = true }

[features]
gui = ["dep:settings_app"]
