[package]
name = "custom_backend"
version = "0.1.0"
edition = "2021"



[dependencies]
backend = { path = "../backend" }
log = "0.4"
local = { path = "../local" }
libloading = "0.8"
thiserror = "1.0"
shared_deps = { path = "../shared_deps" }
serde = { version = "1.0", features = ["derive"] }
weather_dirs = { path = "../weather_dirs" }
weather_structs = { path = "../weather_structs" }
