[package]
name = "custom_backend"
version = "0.1.0"
edition = "2021"



[dependencies]
bincode = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

libloading = "0.8"

backend = { path = "../backend" }
local = { path = "../local" }
weather_dirs = { path = "../weather_dirs" }
weather_structs = { path = "../weather_structs" }
