[package]
name = "layout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
log = "0.4"
chrono = "0.4"
tera = "1"

shared_deps = { path = "../shared_deps" }
async_runner = { path = "../async_runner" }
custom_backend = { path = "../custom_backend" }
updater = { path = "../updater" }
local = { path = "../local" }
backend = { path = "../backend" }
terminal = { path = "../terminal" }
networking = { path = "../networking" }
weather_dirs = { path = "../weather_dirs" }
weather_error = { path = "../weather_error" }