[package]
name = "local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_deps = { path = "../shared_deps" }
networking = { path = "../networking" }
serde = "1.0"
log = "0.4"
hex = "0.4"
sha2 = "0.10"
weather_dirs = { path = "../weather_dirs" }
weather_error = { path = "../weather_error" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Foundation", "Devices_Geolocation", "System_Power", "Win32_System_Power", "Win32_Foundation"] }
