[package]
name = "location"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
simd-json = "0.9.2"
weather_error = { path = "../weather_error" }
local = { path = "../local" }
networking = { path = "../networking" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.*", features = ["Foundation", "Devices_Geolocation"] }
