[package]
name = "networking_internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie_store = "0.20"
rayon = "1.8"
serde = "1.0"
log = "0.4"
shared_deps = { path = "../shared_deps" }
ureq = { version = "2.8", default-features = false, features = ["tls", "gzip", "cookies", "json"], path = "../../lib/ureq" }
url = "2.4"
