[package]
name = "networking_internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie_store = "0.21"
rayon = "1.8"
serde = "1.0"
log = "0.4"
shared_deps = { path = "../shared_deps" }
url = "2.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { default-features = false, features = ["tls", "gzip", "cookies", "json"], path = "../../lib/ureq" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = "1.0.0-rc1"
