[package]
name = "settings_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dark-light = "1.0"
image = "0.24"
iced = { version = "0.12", features = ["image"] }
rfd = "0.13"
local = { path = "../local" }
weather_dirs = { path = "../weather_dirs" }
log = "0.4.20"
