[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
shared_deps = { path = "../shared_deps" }
local = { path = "../local" }
terminal = { path = "../terminal" }
networking = { path = "../networking" }
weather_error = { path = "../weather_error" }
self-replace = "1.3"
reqwest = { version = "0.11", features = ["blocking"] }
