[package]
name = "weather_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde_json = "1.0"
simd-json = "0.10"
wasmer = "3.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.*" }
