[package]
name = "weather_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
custom_backend = { path = "../custom_backend" }
networking = { path = "../networking" }
local = { path = "../local" }
weather_error = { path = "../weather_error" }
