[package]
name = "weather_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
custom_backend = { path = "../custom_backend" }
chrono = "0.4"
networking = { path = "../networking" }
local = { path = "../local" }
shared_deps = { path = "../shared_deps" }
weather_structs = { path = "../weather_structs" }
